Solved #2 Icon Cloudflare problems with local files Removed version from paths Changed // to https:// in the path variable

--- a/sass/components/font-awesome/variables.scss
+++ b/sass/components/font-awesome/variables.scss
@@ -3,7 +3,7 @@
 
 $fa-sass-asset-helper: false !default;
 
-$fa-font-path: "//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/" !default;
+$fa-font-path: "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/fonts/" !default;
 $fa-font-name: "fontawesome-webfont" !default;
 
 $fa-font-size-base:   14px !default;
